# game

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  defaults.toml
res/shaders/: varying.def.sc  vs_cubes.sc
shaders/: common.sh  fs_cubes.sc  vs_cubes.sc
src/: global.hpp  main.cpp
src/gfx/: renderer.cpp  renderer.hpp
src/gfx/mesh/: coloredcubemesh.cpp  coloredcubemesh.hpp  mesh.hpp
src/gfx/shader/: shadermanager.cpp  shadermanager.hpp
src/gfx/texture/: texturemanager.cpp  texturemanager.hpp
src/platform/: glfwwindow.cpp  glfwwindow.hpp  platform.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/shader/: shadermanager.cpp  shadermanager.hpp
src/world/: camera.cpp  camera.hpp
